<?xml version="1.0"?>
<package>
  <name>sitl_firmware</name>
  <version>0.0.1</version>
  <description>Simulated rover firmware</description>

  <maintainer email="giovani.diniz@bbn.com">Giovani Diniz</maintainer>

  <license>Proprietary</license>

  <author email="giovani.diniz@bbn.com">Giovani Diniz</author>

  <build_depend>message_generation</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>

  </export>
</package>
